<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alias</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="start_server">Start Server</string>
    <string name="connect_server">Connect Server</string>
    <string name="title_activity_connect_server">ConnectServerActivity</string>
    <string name="title_activity_start_server">StartServerActivity</string>
    <string name="main_page">Open menu from menu button to connect server or start new server</string>

    <!-- Connect server view -->
    <string name="connect_server_ins"> Type server ip-address and select the game type. </string>
    <string name="edit_message"> server ip-address e.g  82.131.29.171 </string>
    <string name="server_status_message"> Server Status </string>
    <string name="server_ip_message"> Server IP </string>
    <string name="button_send">Connect</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="stop_server_text">Stop Server</string>
    <string name="start_server_text">Start Server</string>
    <string name="word_label">Your word is</string>
    <string name="dialog_connected">Connected to a client</string>
    <string name="limited">Limited</string>
    <string name="normal">Normal</string>
    <string name="ok">Ok</string>
    <string name="game_type">Game type</string>

    <!-- Game view -->
    <string name="send_hint">Send hint</string>
    <string name="edit_hint">Type a hint here</string>
    <string name="send_guess">Send guess</string>
    <string name="edit_guess">Type a guess here</string>
    <string name="start_new_game">Start a new game with the same player!</string>
    <string name="go_back_to">Go back to start menu.</string>
    <string name="dummy_reply">Dummy reply</string>
    <string name="dummy_hint">Dummy hint</string>
    <string name="title_activity_server_started">ServerStartedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="server_started_message">Listening on IP:</string>
    <string name="title_activity_main_activitysdasd">MainActivitysdasd</string>
    <string name="start_game_message">Start Game</string>
    <string name="send_ip_message">Send Address</string>
    <string name="send_message">Send</string>
    <string name="disconnect_message">Disconnect</string>
    <string name="title_activity_send_ip">SendIPActivity</string>
    <string name="title_activity_guesser_game">GuesserGameActivity</string>

</resources>