<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity" >

	<TextView android:id="@+id/server_connected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />
	
    <EditText android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_hint" 
        android:layout_below="@+id/server_connected"/>
    
    <Button android:id="@+id/hint_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_hint" 
        android:onClick="sendHint" 
        android:layout_below="@+id/hint"/>
    
    <EditText android:id="@+id/guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_guess" 
        android:layout_below="@+id/server_connected"/>
    
    <Button android:id="@+id/guess_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_guess" 
        android:onClick="sendGuess" 
        android:layout_below="@+id/guess"/>

</RelativeLayout>