<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GuesserGameActivity" >
    
    <TextView
        android:id="@+id/upper_guess_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/guess"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="Message"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/hint_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/upper_guess_msg"
        android:layout_below="@+id/upper_guess_msg"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lower_guess_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hint_message"
        android:layout_below="@+id/hint_message"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/guess_button"
        android:layout_below="@+id/lower_guess_msg"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_guess" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/guess_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/guess"
        android:layout_marginLeft="17dp"
        android:onClick="sendGuess"
        android:text="@string/send_guess" />

    <Button
        android:id="@+id/start_new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/upper_guess_msg"
        android:layout_below="@+id/upper_guess_msg"
        android:layout_centerHorizontal="true"
        android:onClick="restartGame"
        android:text="@string/start_new_game" />

    <ProgressBar
        android:id="@+id/waiting_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upper_guess_msg"
         />

</RelativeLayout>